Display stop icon instead of pause icon for live streams without timeshift

--- a/src/scss/skin-modern/components/_playbacktogglebutton.scss
+++ b/src/scss/skin-modern/components/_playbacktogglebutton.scss
@@ -12,5 +12,9 @@
 
   &.#{$prefix}-on {
     background-image: svg('assets/skin-modern/images/pause.svg');
+
+    &.#{$prefix}-stoptoggle {
+      background-image: svg('assets/skin-modern/images/stop.svg');
+    }
   }
 }
